Blocked mixed content downloads cause us to show the downloads panel until they're removed from history
Categories
(Core :: DOM: Security, defect, P2)
Tracking
()
People
(Reporter: Gijs, Assigned: julianwels)
References
(Blocks 1 open bug)
Details
(Whiteboard: [domsecurity-active])
Attachments
(1 file, 1 obsolete file)
STR:
- macOS or Windows (haven't tested Linux), today's nightly
- go to https://www.thinkbroadband.com/download
- click any of the links
- select "save as" instead of "open"
- wait for the download panel to show (it might not, bug 1685736)
- close the panel
- restart Firefox (either for an update, or just quit it and reopen it)
ER:
the panel does not open up again for the same download
AR:
the panel opens up again
This would get very annoying after a while, and the only workaround appears to be removing the download from your history, by using the context menu or the download manager. A lot of users won't be able to figure this out.
We shouldn't show the panel for downloads that aren't from the current session.
Updated•5 years ago
|
Comment 1•4 years ago
|
||
I can confirm this on macOS.
Updated•4 years ago
|
Comment 3•4 years ago
|
||
¡Hola y'all!
FWIW updating flags as per Gijs at https://matrix.to/#/!evDrGXhEMVVjldSwGf:mozilla.org/$j4EruFiSrc6DLu7d4lOZN0WhgILeSaL9W7eLoylOpSc?via=mozilla.org&via=matrix.org&via=chat.weho.st this one bite me on 89.
¡Gracias!
Alex
Reporter | ||
Comment 4•4 years ago
|
||
This is disabled outside of Nightly so updating tracking flags for that...
Assignee | ||
Comment 6•4 years ago
|
||
Updated•4 years ago
|
Assignee | ||
Comment 7•4 years ago
|
||
Comment 9•4 years ago
|
||
bugherder |
Comment 10•4 years ago
|
||
Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.
Updated•4 years ago
|
Updated•4 years ago
|
Comment 11•4 years ago
|
||
Reproduced this issue on an affected Nightly build from 2021-01-08 on Ubuntu 20.04, following the STR from comment 0.
Verified as fixed on Firefox 91.0.2 (20210823123856) across the following platforms: Ubuntu 20.04, Win 10 x64 and macOS 10.15. The download panel does not open up again after a restart or an update.
Description
•