Bug 1685737 - Older blocked mixed-content downloads get removed from download-list on restart. r=Gijs

Differential Revision: https://phabricator.services.mozilla.com/D113716