toolkit/components/downloads/DownloadStore.jsm
@@ -28,6 +28,10 @@
 
 "use strict";
 
+// Time after which insecure downloads that have not been dealt with on shutdown
+// get removed (5 minutes).
+const MAX_INSECURE_DOWNLOAD_AGE_MS = 5 * 60 * 1000;
+
 var EXPORTED_SYMBOLS = ["DownloadStore"];
 
 const { XPCOMUtils } = ChromeUtils.import(
@@ -99,12 +103,30 @@ DownloadStore.prototype = {
         return;
       }
 
+      // Set this to true when we make changes to the download list that should
+      // be reflected in the file again.
+      let storeChanges = false;
+      let removePromises = [];
       let storeData = JSON.parse(gTextDecoder.decode(bytes));
 
       // Create live downloads based on the static snapshot.
       for (let downloadData of storeData.list) {
         try {
           let download = await Downloads.createDownload(downloadData);
+
+          // Insecure downloads that have not been dealt with on shutdown should
+          // get cleaned up and removed from the download list on restart unless
+          // they are very new
+          if (
+            download.error?.becauseBlockedByReputationCheck &&
+            download.error.reputationCheckVerdict == "Insecure" &&
+            Date.now() - download.startTime > MAX_INSECURE_DOWNLOAD_AGE_MS
+          ) {
+            removePromises.push(download.removePartialData());
+            storeChanges = true;
+            continue;
+          }
+
           try {
             if (!download.succeeded && !download.canceled && !download.error) {
               // Try to restart the download if it was in progress during the
@@ -123,6 +145,15 @@ DownloadStore.prototype = {
           }
         } catch (ex) {
           // If an item is unrecognized, don't prevent others from being loaded.
+          Cu.reportError(ex);
+        }
+      }
+
+      if (storeChanges) {
+        try {
+          await Promise.all(removePromises);
+          await this.save();
+        } catch (ex) {
           Cu.reportError(ex);
         }
       }
